update member list

--- a/index-en.html
+++ b/index-en.html
@@ -289,6 +289,10 @@
 							<td>　</td>
 							<td>Hirotaka Ogawa (Research Leader, AIST)<!--Katsuki Fujisawa (Joint Research Fellow, AIST)<a href="#" class="btn btn-warning">ラボ長挨拶</a--></td>
 						</tr>
+            <tr>
+							<td>RWBC-OIL Deputy Director</td><td></td>
+							<td>Takahiro Hirofuchi (Senior Researcher, AIST)</td>
+						</tr>
 						<tr>
 							<td>RWBC-OIL Deputy Director</td><td></td>
 							<td>Toshio Endo (Professor, TokyoTech)</td>
@@ -301,43 +305,79 @@
 					<!--</p> -->
 
 					<h3>Real World HPC Systems for Big Data/AI Research Team</h3>
-					<p class="lead">
-	    Group Leader:<a href="https://www.itri.aist.go.jp/cpc/researcher/takano.html">Ryousei Takano</a> (Research Leader, AIST)<br><br>
 
-					  Toshio Endo (Professor, TokyoTech)<br>
-					  Rio Yokota (Associate Professor, TokyoTech)<br>
-					  Akira Nukada (Associate Professor, TokyoTech)<br>
-					  Hideyuki Jitsumoto (Assistant Professor, TokyoTech)<br>
-					  Akihiro Nomura (Assistant Professor, TokyoTech)<br>
-					  Satoshi Matsuoka (Specially Appointed Professor, TokyoTech)<br>
-					  Katsuki Fujisawa (Joint Research Fellow, AIST)<br>
-					  Hirotaka Ogawa (Research Leader, AIST)<br>
-					  <!-- Kuniyasu Suzaki (Senior Researcher, AIST)<br>-->
-					  Takahiro Hirofuchi (Senior Researcher, AIST)<br>
-					  Yuusuke Tanimura (Senior Researcher, AIST)<br>
-					  <!-- Hitoshi Sato (Senior Researcher, AIST)<br>-->
-					  Mohamed Wahib (Senior Researcher, AIST)<br>
-					  Shinichiro Takizawa (Visiting Researcher, AIST)<br>
-            Nguyen Truong (Postdoc, AIST)<br>
-					  Shinichi Miura (Specially Appointed Assistant Professor, TokyoTech / Visiting Researcher, AIST)<br>
-					  <!--Koichi Hagishima (Visiting Researcher, AIST)<br> -->
-					  <!--Atsushi Sasaki (Visiting Researcher, AIST)<br>-->
-					  Tetsuo Fukunaga (Visiting Researcher, AIST)<br>
-            Peng Chen (Technical Staff, AIST)
-					</p>
+          <p class="lead">
+            Group Leader: Takahiro Hirofuchi (Senior Researcher, AIST) <br><br>
+            Mohamed Wahib (Senior Researcher, AIST)<br>
+            Nguyen Truong (Researcher, AIST)<br>
+            Ben Ahmed Akram（Researcher, AIST）<br>
+            Peng Chen (Invited Researcher, AIST) <br>
+            Hiroki Kanezashi (Postdoc, AIST)<br>
+          </p>
+
+          <p class="lead">
+            Katsuki Fujisawa (Joint Research Fellow, AIST)<br>
+            Hirotaka Ogawa (Research Leader, AIST)<br>
+            Ryousei Takano (Senior Researcher, AIST)<br>
+            Shinichiro Takizawa (Senior Researcher, AIST)<br>
+            Yusuke Tanimura (Senior Researcher, AIST)<br>
+          </p>
+
+          <p class="lead">
+            Toshio Endo (Professor, TokyoTech)<br>
+            Rio Yokota (Associate Professor, TokyoTech)<br>
+          </p>
+
+          <p class="lead">
+            Satoshi Matsuoka (Specially Appointed Professor, TokyoTech)<br>
+            Akihiro Nomura (Assistant Professor, TokyoTech)<br>
+          </p>
+
 
 					<h3>Real World Big Data/AI Applications Research Team</h3>
 					<p class="lead">
 					  Group Leader: Hirotaka Ogawa (Research Leader, AIST)<br><br>
+            Ryousuke Nakamura (Research Leader, AIST)<br>
+            Lee Shi-Wook (Senior Researcher, AIST)<br>
+            Masaki Onishi (Research Leader, AIST)<br>
+            Chiaki Tsutsumi (Invited Researcher, AIST) <br>
+            Masashi Matsuoka (Professor, TokyoTech)<br>
 					  Koichi Shinoda (Professor, TokyoTech)<br>
-					  Tsuyoshi Murata (Associate Professor, TokyoTech)<br>
-					  Nakamasa Inoue (Assistant Professor, TokyoTech)<br>
-					  Ryousuke Nakamura (Research Leader, AIST)<br>
-					  LEE SHI-WOOK (Senior Researcher, AIST)<br>
-					  Poliyapram Vinayaraj (Postdoc, AIST)
+            Asako Kanezaki (Associate Professor, TokyoTech)<br>
+            Nakamasa Inoue (Assistant Professor, TokyoTech)<br>
+            Uto Kuniaki (Assistant Professor, TokyoTech)<br>
+          </p>
+
+          <p class="lead">
+					  Kentaro Tomii (Research Leader, AIST)<br>
+  					Jun Sese (Invited Researcher, AIST)<br>
+					  Yutaka Akiyama (Professor, TokyoTech)<br>
+					  Takuji Yamada (Associate Professor, TokyoTech)<br>
+					  Takashi Ishida (Associate Professor, TokyoTech)<br>
+					  Masahito Ohue (Assistant Professor, TokyoTech)<br>
+					  Masakazu Sekijima (Associate Professor, TokyoTech)<br>
+            Keisuke Yanagisawa (Assistant Professor, TokyoTech)<br>
+            Naoki Wakui  (Researcher, TokyoTech)<br>
+            Kazuki Izawa (Researcher, TokyoTech)<br>
 					</p>
 
-					<p class="lead">
+          <p class="lead">
+            Hiroya Takamura (Research Leader, AIST)<br>
+            Ken Sakurada (Senior Researcher, AIST)<br>
+					  Naoaki Okazaki (Professor, TokyoTech; Invited Researcher, AIST)<br>
+            Sho Takase (Associate Professor, TokyoTech)<br>
+					</p>
+
+          <p class="lead">
+            Xin Liu (Senior Researcher, AIST)<br>
+            Kyoungsook Kim (Research Leader, AIST)<br>            
+            Tsuyoshi Murata (Professor, TokyoTech)<br>
+            Masamichi Shimosaka  (Associate Professor, TokyoTech)<br>
+					</p>
+
+					<!--p class="lead">
+            LEE SHI-WOOK (Senior Researcher, AIST)<br>
+            Poliyapram Vinayaraj (Postdoc, AIST)
 					  Misako Takayasu (Professor, TokyoTech)<br>
 					  Hiroshi Deguchi (Professor, TokyoTech)<br>
 					  Isao Ono (Associate Professor, TokyoTech)<br>
@@ -345,25 +385,8 @@
 					  Eiichi Sakurai (Researcher, AIST)<br>
 					  Takao Terano (Visiting Researcher, AIST)<br>
 					  Yuya Murata (Postdoc, AIST)
-					</p>
+					</p-->
 
-					<p class="lead">
-					  Yutaka Akiyama (Professor, TokyoTech)<br>
-					  Takuji Yamada (Associate Professor, TokyoTech)<br>
-					  Takashi Ishida (Associate Professor, TokyoTech)<br>
-					  Masahito Ohue (Assistant Professor, TokyoTech)<br>
-					  Masakazu Sekijima (Research Unit Leader, TokyoTech)<br>
-					  Jun Sese (Visiting Researcher, AIST)<br>
-					  Kentaro Tomii (Research Leader, AIST)<br>
-					  <!-- Kenji Nagata (Senior Researcher, AIST)<br>-->
-					  <!-- Kuo Tony (Postdoc, AIST) -->
-					</p>
-
-					<p class="lead">
-					  Naoaki Okazaki (Professor, TokyoTech)<br>
-					  Hiroya Takamura (Research Leader, AIST)<br>
-					  Ken Sakurada (Senior Researcher, AIST)
-					</p>
 				</div>
 			</div>
 		</div><!-- /.container -->
