--- a/index.html
+++ b/index.html
@@ -302,12 +302,41 @@
 					<!--p class="lead">RWBC-OIL ラボ長　松岡 聡（東京工業大学 教授）<a href="#" class="btn btn-warning">ラボ長挨拶</a><br-->
 					<p class="lead"><!--RWBC-OIL ラボ長　藤澤 克樹（産業技術総合研究所 特定フェロー）<a href="#" class="btn btn-warning">ラボ長挨拶</a--><br>
 					RWBC-OIL ラボ長　小川 宏高（産業技術総合研究所 研究チーム長）<br>
-					RWBC-OIL 副ラボ長　遠藤 敏夫（東京工業大学 教授）<br>
-					RWBC-OIL 副ラボ長　 藤澤 克樹（産総研 特定フェロー）</p>
+          RWBC-OIL 副ラボ長　広渕 崇宏（産総研 主任研究員）<br>
+          RWBC-OIL 副ラボ長　遠藤 敏夫（東工大教授、産総研招聘研究員）<br>
+					RWBC-OIL 副ラボ長　藤澤 克樹（産総研 特定フェロー）<br>
+          </p>
 
 
 					<h3>実社会HPC班</h3>
-					<p class="lead">
+          <p class="lead">
+            班長 広渕 崇宏（産総研 主任研究員)<br><br>
+            Mohamed Wahib（産総研 主任研究員）<br>
+            Nguyen Truong（産総研 研究員）<br>
+            Ben Ahmed Akram（産総研 研究員）<br>
+            陳 鵬（産総研 招聘研究員）<br>
+            金刺 宏樹（産総研 特別研究員）<br>
+          </p>
+
+          <p class="lead">
+            藤澤 克樹（産総研 特定フェロー）<br>
+            小川 宏高（産総研 研究チーム長）<br>
+            高野 了成 （産総研 主任研究員）<br>
+            滝澤 真一朗（産総研 主任研究員）<br>
+            谷村 勇輔（産総研 主任研究員）<br>
+          </p>
+
+          <p class="lead">
+            遠藤 敏夫（東京工業大学 教授）<br>
+            横田 理央（東工大 准教授）<br>
+          </p>
+
+          <p class="lead">
+            松岡 聡（東工大 特任教授）<br>
+            野村 哲弘（東工大 助教）<br>
+					</p>
+
+					<!--p class="lead">
             班長 <a href="https://www.itri.aist.go.jp/cpc/researcher/takano.html">高野 了成 </a>（産総研 研究グループ長)<br><br>
 					  遠藤 敏夫（東工大 教授）<br>
 					  横田 理央（東工大 准教授）<br>
@@ -317,21 +346,103 @@
 					  松岡 聡（東工大 特任教授）<br>
 					  藤澤 克樹（産総研 特定フェロー）<br>
 					  小川 宏高（産総研 研究チーム長）<br>
-					  <!-- 須崎 有康（産総研 主任研究員）<br>-->
 					  広渕 崇宏（産総研 主任研究員）<br>
 					  谷村 勇輔（産総研 主任研究員）<br>
-					  <!-- 佐藤 仁（産総研 主任研究員）<br> -->
 					  Mohamed Wahib（産総研 主任研究員）<br>
 					  滝澤 真一朗（産総研 招聘研究員）<br>
             Nguyen Truong（産総研 特別研究員）<br>
 					  三浦 信一（産総研 招聘研究員）<br>
-					  <!--萩島 功一（産総研 招聘研究員）<br> -->
-					  <!-- 佐々木 淳（産総研 招聘研究員）<br> -->
 					  福永 哲雄（産総研 招聘研究員）<br>
             陳 鵬（産総研 テクニカルスタッフ）
+					</p-->
+
+          <h3>データ活用班</h3>
+
+
+          <p class="lead">
+					班長 小川 宏高（産総研 研究チーム長）<br><br>
+          中村 良介（産総研 研究チーム長）<br>
+          李 時旭（産総研 主任研究員）<br>
+          大西 正輝（産総研 研究チーム長）<br>
+          堤 千明 （産総研 招聘研究員）  <br>
+          松岡 昌志（東工大 教授）       <br>
+          篠田 浩一（東工大 教授）       <br>
+          金崎　朝子（東工大 准教授）     <br>
+          井上 中順（東工大 助教）      <br>
+          宇都　有昭（東工大 助教）     <br>
+          </p>
+
+          <p class="lead">
+          富井 健太郎（産総研 研究チーム長）  <br>
+          瀬々 潤（産総研 招聘研究員）        <br>
+          秋山 泰（東工大 教授）        <br>
+          山田 拓司（東工大 准教授）        <br>
+          石田 貴士（東工大 准教授）        <br>
+          大上 雅史（東工大 助教）        <br>
+          関嶋 政和（東工大 准教授）         <br>
+          柳澤 渓甫（東工大 助教）          <br>
+          和久井　直樹 （東工大 研究員）     <br>
+          伊澤　和輝 （東工大 研究員）<br>
+          </p>
+
+          <p class="lead">
+          高村 大也（産総研 研究チーム長）   <br>
+          櫻田 健 (産総研 主任研究員)        <br>
+          岡崎 直観（東工大教授、産総研招聘研究員）<br>
+          高瀬 翔　(東工大助教)<br>
+          </p>
+
+          <p class="lead">
+          劉 欣（産総研 主任研究員）          <br>
+          金 京淑（産総研 研究チーム長）       <br>
+          村田 剛志（東工大教授）        <br>
+          下坂　正倫（東工大 准教授）<br>
+          </p>
+
+
+					<!--h3>データ活用班</h3>
+          <p class="lead">
+					  班長 小川 宏高（産総研 研究チーム長）<br><br>
+            松岡 昌志（東工大 教授）<br>
+					  篠田 浩一（東工大 教授）<br>
+            金崎　朝子（東工大 准教授）<br>
+					  井上 中順（東工大 助教）<br>
+            宇都　有昭（東工大 助教）<br>
+					  中村 良介（産総研 研究チーム長）<br>
+					  李 時旭（産総研 主任研究員）<br>
+            大西 正輝（産総研 研究チーム長）<br>
+            堤 千明 （産総研 招聘研究員）<br>
 					</p>
 
-					<h3>データ活用班</h3>
+					<p class="lead">
+					  秋山 泰（東工大 教授）<br>
+					  山田 拓司（東工大 准教授）<br>
+					  石田 貴士（東工大 准教授）<br>
+					  大上 雅史（東工大 助教）<br>
+					  関嶋 政和（東工大 准教授）<br>
+            柳澤 渓甫（東工大 助教）<br>
+            和久井　直樹 （東工大 研究員）<br>
+            伊澤　和輝 （東工大 研究員）<br>
+					  瀬々 潤（産総研 招聘研究員）<br>
+					  富井 健太郎（産総研 研究チーム長）<br>
+					</p>
+
+					<p class="lead">
+					  岡崎 直観（東工大教授、産総研招聘研究員）<br>
+            高瀬 翔　(東工大助教) <br>
+					  高村 大也（産総研 研究チーム長）<br>
+					  櫻田 健 (産総研 主任研究員)
+					</p>
+
+          <p class="lead">
+					  村田 剛志（東工大教授）<br>
+            下坂　正倫（東工大 准教授）<br>
+            金 京淑（産総研 研究チーム長）<br>
+            劉 欣（産総研 主任研究員）<br>
+					</p>
+
+
+
 					<p class="lead">
 					  班長 小川 宏高（産総研 研究チーム長）<br><br>
 					  篠田 浩一（東工大 教授）<br>
@@ -360,15 +471,13 @@
 					  関嶋 政和（東工大 准教授）<br>
 					  瀬々 潤（産総研 招聘研究員）<br>
 					  富井 健太郎（産総研 研究チーム長）<br>
-					  <!--永田 賢二（産総研 主任研究員）<br>-->
-					  <!--Kuo Tony（産総研 特別研究員） -->
 					</p>
 
 					<p class="lead">
 					  岡崎 直観（東工大 教授）<br>
 					  高村 大也（産総研 研究チーム長）<br>
 					  櫻田 健 (産総研 主任研究員)
-					</p>
+					</p-->
 				</div>
 			</div>
 		</div><!-- /.container -->
