--- a/index-en.html
+++ b/index-en.html
@@ -311,7 +311,7 @@
             Mohamed Wahib (Senior Researcher, AIST)<br>
             Nguyen Truong (Researcher, AIST)<br>
             Ben Ahmed Akram（Researcher, AIST）<br>
-            Peng Chen (Invited Researcher, AIST) <br>
+            Peng Chen (Researcher, AIST) <br>
             Hiroki Kanezashi (Postdoc, AIST)<br>
           </p>
 
