--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             Mohamed Wahib（産総研 主任研究員）<br>
             Nguyen Truong（産総研 研究員）<br>
             Ben Ahmed Akram（産総研 研究員）<br>
-            陳 鵬（産総研 招聘研究員）<br>
+            陳 鵬（産総研 研究員）<br>
             金刺 宏樹（産総研 特別研究員）<br>
           </p>
 
