--- a/events/index.html
+++ b/events/index.html
@@ -94,6 +94,15 @@
 		<div class="col-md-12">
 		<!-- Add new event on top -->
 
+
+        <h3>SC 2020 Exhibitionでの研究成果展示</h3>
+        <ul>
+          <li>Date: 2020/11/9 - 2020/11/19</li>
+          <li>Online</li>
+          <li><a href="./20201109-sc20/index.html">More information</a></li>
+        </ul>
+
+
 			<h3>第2回 RWBC-OIL Workshop 「ABCIと国際連携」</h3>
 			<ul>
 			  <li>開催日程: 2020/01/20（月）</li>
