--- a/events/20201109-sc20/index.html
+++ b/events/20201109-sc20/index.html
@@ -107,7 +107,7 @@
         </p-->
         <p class="indent-block lead">
           Highlights at SC20 is presentations of RWBC-OIL research activities that use ABCI and TSUBAME3.0.
-          This year, #### research papers and #### posters from AIST and TokyoTech are presented.
+          This year, a research paper from AIST and TokyoTech are presented.
           There are also many talks from RWBC-OIL researchers at BoF, panels, workshop and exhibition booths.
         </p>
         <!--p class="indent-block lead">
