sc20 + ikegami-san

--- a/events/20201109-sc20/index.html
+++ b/events/20201109-sc20/index.html
@@ -153,9 +153,32 @@
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc20.supercomputing.org/presentation/?sess=sess176&id=pap256#038;id=pap256" target="_blank">Scaling Distributed Deep Learning Workloads beyond the Memory Capacity with KARMA</a></span><br>
           <span class="presentation-speaker">Mohamed Wahib, Haoyu Zhang, Truong Thao Nguyen, Aleksandr Drozd, Jens Domke, Lingqi Zhang, Ryousei Takano, Satoshi Matsuoka</span><br>
-          Date (EDT): Tuesday, 17 November 2020 1:00pm - 1:30pm <br>
+          Date (EDT): Tuesday, 17 November 2020, 1:00pm - 1:30pm <br>
           Location: Track 4
         </p>
+		
+
+				
+        <h4>Awards and Rankings</h4>
+        <p class="indent-block lead">
+          <span class="presentation-title"><a href="https://sc20.supercomputing.org/presentation/?id=bof130&sess=sess314" target="_blank">TOP500 Supercomputers</a></span><br>
+          Date (EDT): Monday, 16 November 2020, 4pm - 5:30pm<br>
+          Location: Track 1
+        </p>
+		
+        <!--p class="indent-block lead">
+          <span class="presentation-title"><a href="https://sc20.supercomputing.org/session/?sess=sess334" target="_blank">SC20 Awards Ceremony</a></span><br>
+
+          Date (EDT): Thursday, 19 November 2020, 3pm - 4pm<br>
+          Location: Track 1
+        </p-->
+		
+        <!--p class="indent-block lead">
+          <span class="presentation-title"><a href="https://sc20.supercomputing.org/presentation/?id=bof119&sess=sess318" target="_blank">MLPerf: A Benchmark for Machine Learning</a></span><br>
+          Date (EDT): Wednesday, 18 November 2020, 2:30pm - 3:45pm EST<br>
+          Location: Track 9
+        </p-->		
+		
         <!--p class="indent-block lead">
           <span class="presentation-title"><a href="https://sc19.supercomputing.org/presentation/?id=pap220&sess=sess161" target="_blank">A Versatile Software Systolic Execution Model for GPU Memory Bound Kernels</a></span><br>
           <span class="presentation-speaker">Peng Chen, Mohamed Wahib, Shinichiro Takizawa, Ryousei Takano, Satoshi Matsuoka</span><br>
