--- a/index-en.html
+++ b/index-en.html
@@ -308,7 +308,8 @@
 
           <p class="lead">
             Group Leader: Takahiro Hirofuchi (Senior Researcher, AIST) <br><br>
-            Mohamed Wahib (Senior Researcher, AIST)<br>
+            Tsutomu Ikegami (Senior Researcher, AIST)<br>
+			Mohamed Wahib (Senior Researcher, AIST)<br>
             Nguyen Truong (Researcher, AIST)<br>
             Ben Ahmed Akram（Researcher, AIST）<br>
             Peng Chen (Researcher, AIST) <br>
