--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
 					<h3>実社会HPC班</h3>
           <p class="lead">
             班長 広渕 崇宏（産総研 主任研究員)<br><br>
+			池上 努 （産総研 主任研究員）<br>
             Mohamed Wahib（産総研 主任研究員）<br>
             Nguyen Truong（産総研 研究員）<br>
             Ben Ahmed Akram（産総研 研究員）<br>
