以下のメンバーは削除してください：
瀬々 潤（産総研 招聘研究員）

秋山 泰（東工大 教授）

山田 拓司（東工大 准教授）

石田 貴士（東工大 准教授）

大上 雅史（東工大 助教）

関嶋 政和（東工大 准教授）

柳澤 渓甫（東工大 助教）

和久井 直樹 （東工大 研究員）

伊澤 和輝 （東工大 研究員）

富井さんを課題2-1に所属させてください：

大西さんの下に富井さんを移動

富井 健太郎（産総研 研究チーム長）

コンタクト先のメールアドレスを変更してください：

info-rwbc-ml@aist.go.jp  => rwbc-jimu-ml@aist.go.jp

--- a/index-en.html
+++ b/index-en.html
@@ -341,6 +341,7 @@
             Ryousuke Nakamura (Research Leader, AIST)<br>
             Lee Shi-Wook (Senior Researcher, AIST)<br>
             Masaki Onishi (Research Leader, AIST)<br>
+			Kentaro Tomii (Research Leader, AIST)<br>
             Chiaki Tsutsumi (Invited Researcher, AIST) <br>
             Masashi Matsuoka (Professor, TokyoTech)<br>
 					  Koichi Shinoda (Professor, TokyoTech)<br>
@@ -349,18 +350,6 @@
             Uto Kuniaki (Assistant Professor, TokyoTech)<br>
           </p>
 
-          <p class="lead">
-					  Kentaro Tomii (Research Leader, AIST)<br>
-  					Jun Sese (Invited Researcher, AIST)<br>
-					  Yutaka Akiyama (Professor, TokyoTech)<br>
-					  Takuji Yamada (Associate Professor, TokyoTech)<br>
-					  Takashi Ishida (Associate Professor, TokyoTech)<br>
-					  Masahito Ohue (Assistant Professor, TokyoTech)<br>
-					  Masakazu Sekijima (Associate Professor, TokyoTech)<br>
-            Keisuke Yanagisawa (Assistant Professor, TokyoTech)<br>
-            Naoki Wakui  (Researcher, TokyoTech)<br>
-            Kazuki Izawa (Researcher, TokyoTech)<br>
-					</p>
 
           <p class="lead">
             Hiroya Takamura (Research Leader, AIST)<br>
@@ -464,7 +453,7 @@
 						<p><strong>Tel.</strong>03-3726-1111</p>
 					</div>
 					<div><i class="fa fa-envelope-o pull-left"></i>
-						<p><strong>E-mail</strong>info-rwbc-ml@aist.go.jp</p>
+						<p><strong>E-mail</strong>rwbc-jimu-ml@aist.go.jp</p>
 					</div>
 					</div><!-- /.contact-info-inner -->
 				</div>
