--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
           中村 良介（産総研 研究チーム長）<br>
           李 時旭（産総研 主任研究員）<br>
           大西 正輝（産総研 研究チーム長）<br>
+		  富井 健太郎（産総研 研究チーム長）  <br>
           堤 千明 （産総研 招聘研究員）  <br>
           松岡 昌志（東工大 教授）       <br>
           篠田 浩一（東工大 教授）       <br>
@@ -373,18 +374,6 @@
           宇都 有昭（東工大 助教）     <br>
           </p>
 
-          <p class="lead">
-          富井 健太郎（産総研 研究チーム長）  <br>
-          瀬々 潤（産総研 招聘研究員）        <br>
-          秋山 泰（東工大 教授）        <br>
-          山田 拓司（東工大 准教授）        <br>
-          石田 貴士（東工大 准教授）        <br>
-          大上 雅史（東工大 助教）        <br>
-          関嶋 政和（東工大 准教授）         <br>
-          柳澤 渓甫（東工大 助教）          <br>
-          和久井 直樹 （東工大 研究員）     <br>
-          伊澤 和輝 （東工大 研究員）<br>
-          </p>
 
           <p class="lead">
           高村 大也（産総研 研究チーム長）   <br>
@@ -548,7 +537,7 @@
 	    					<p><strong>電話</strong>03-3726-1111（代表）</p>
 	    				</div>
 	    				<div><i class="fa fa-envelope-o pull-left"></i>
-						<p><strong>Eメール</strong>info-rwbc-ml@aist.go.jp</p>
+						<p><strong>Eメール</strong>rwbc-jimu-ml@aist.go.jp</p>
 	    				</div>
 					</div><!-- /.contact-info-inner -->
 				</div>
