the draft for the upper half

--- a/index-en.html
+++ b/index-en.html
@@ -287,19 +287,19 @@
 						<tr>
 							<td>RWBC-OIL Director</td>
 							<td>　</td>
-							<td>Hirotaka Ogawa (Research Leader, AIST)<!--Katsuki Fujisawa (Joint Research Fellow, AIST)<a href="#" class="btn btn-warning">ラボ長挨拶</a--></td>
+							<td>Takahiro Hirofuchi (Research Leader, AIST)<!--Katsuki Fujisawa (Joint Research Fellow, AIST)<a href="#" class="btn btn-warning">ラボ長挨拶</a--></td>
 						</tr>
-            <tr>
+            <!--tr>
 							<td>RWBC-OIL Deputy Director</td><td></td>
 							<td>Takahiro Hirofuchi (Senior Researcher, AIST)</td>
-						</tr>
+						</tr-->
 						<tr>
 							<td>RWBC-OIL Deputy Director</td><td></td>
 							<td>Toshio Endo (Professor, TokyoTech)</td>
 						</tr>
             <tr>
 							<td>RWBC-OIL Deputy Director</td><td></td>
-              <td>Katsuki Fujisawa (Joint Research Fellow, AIST)</td>
+              <td>Katsuki Fujisawa (Professor, Kyushu University; Joint Research Fellow, AIST)</td>
 						</tr>
 					</table>
 					<!--</p> -->
@@ -307,30 +307,30 @@
 					<h3>Real World HPC Systems for Big Data/AI Research Team</h3>
 
           <p class="lead">
-            Group Leader: Takahiro Hirofuchi (Senior Researcher, AIST) <br><br>
+            Group Leader: Takahiro Hirofuchi (RWBC-OIL Director, AIST) <br><br>
             Tsutomu Ikegami (Senior Researcher, AIST)<br>
-			Mohamed Wahib (Senior Researcher, AIST)<br>
+			      Mohamed Wahib (Senior Researcher, AIST)<br>
             Nguyen Truong (Researcher, AIST)<br>
             Ben Ahmed Akram（Researcher, AIST）<br>
             Peng Chen (Researcher, AIST) <br>
             Hiroki Kanezashi (Postdoc, AIST)<br>
-          </p>
-
-          <p class="lead">
-            Katsuki Fujisawa (Joint Research Fellow, AIST)<br>
-            Hirotaka Ogawa (Research Leader, AIST)<br>
             Ryousei Takano (Senior Researcher, AIST)<br>
             Shinichiro Takizawa (Senior Researcher, AIST)<br>
-            Yusuke Tanimura (Senior Researcher, AIST)<br>
+            Yusuke Tanimura (Group Leader, AIST)<br>
+          </p>
+
+          <!--\p class="lead">
+            Katsuki Fujisawa (Joint Research Fellow, AIST)<br>
+            Hirotaka Ogawa (Research Leader, AIST)<br>
+          </p-->
+
+          <p class="lead">
+            Toshio Endo (Professor, TokyoTech; Invited Researcher, AIST)<br>
+            Rio Yokota (Associate Professor, TokyoTech; Invited Researcher, AIST)<br>
           </p>
 
           <p class="lead">
-            Toshio Endo (Professor, TokyoTech)<br>
-            Rio Yokota (Associate Professor, TokyoTech)<br>
-          </p>
-
-          <p class="lead">
-            Satoshi Matsuoka (Specially Appointed Professor, TokyoTech)<br>
+            Satoshi Matsuoka (Director, RIKEN CCS; Specially Appointed Professor, TokyoTech)<br>
             Akihiro Nomura (Assistant Professor, TokyoTech)<br>
           </p>
 
@@ -360,7 +360,7 @@
 
           <p class="lead">
             Xin Liu (Senior Researcher, AIST)<br>
-            Kyoungsook Kim (Research Leader, AIST)<br>            
+            Kyoungsook Kim (Research Leader, AIST)<br>
             Tsuyoshi Murata (Professor, TokyoTech)<br>
             Masamichi Shimosaka  (Associate Professor, TokyoTech)<br>
 					</p>
