--- a/index.html
+++ b/index.html
@@ -301,39 +301,38 @@
 				 <div class="col-md-12">
 					<!--p class="lead">RWBC-OIL ラボ長　松岡 聡（東京工業大学 教授）<a href="#" class="btn btn-warning">ラボ長挨拶</a><br-->
 					<p class="lead"><!--RWBC-OIL ラボ長　藤澤 克樹（産業技術総合研究所 特定フェロー）<a href="#" class="btn btn-warning">ラボ長挨拶</a--><br>
-					RWBC-OIL ラボ長　小川 宏高（産業技術総合研究所 研究チーム長）<br>
-          RWBC-OIL 副ラボ長　広渕 崇宏（産総研 主任研究員）<br>
+					RWBC-OIL ラボ長　広渕 崇宏（産業技術総合研究所 研究チーム長）<br>
           RWBC-OIL 副ラボ長　遠藤 敏夫（東工大教授、産総研招聘研究員）<br>
-					RWBC-OIL 副ラボ長　藤澤 克樹（産総研 特定フェロー）<br>
+					RWBC-OIL 副ラボ長　藤澤 克樹（九大教授、産総研特定フェロー）<br>
           </p>
 
 
 					<h3>実社会HPC班</h3>
           <p class="lead">
-            班長 広渕 崇宏（産総研 主任研究員)<br><br>
-			池上 努 （産総研 主任研究員）<br>
+            班長 広渕 崇宏（産総研 ラボ長/研究チーム長)<br><br>
+			      池上 努 （産総研 主任研究員）<br>
             Mohamed Wahib（産総研 主任研究員）<br>
             Nguyen Truong（産総研 研究員）<br>
             Ben Ahmed Akram（産総研 研究員）<br>
             陳 鵬（産総研 研究員）<br>
             金刺 宏樹（産総研 特別研究員）<br>
-          </p>
-
-          <p class="lead">
-            藤澤 克樹（産総研 特定フェロー）<br>
-            小川 宏高（産総研 研究チーム長）<br>
             高野 了成 （産総研 主任研究員）<br>
             滝澤 真一朗（産総研 主任研究員）<br>
-            谷村 勇輔（産総研 主任研究員）<br>
+            谷村 勇輔（産総研 研究チーム長）<br>
+          </p>
+
+          <!--p class="lead">
+            藤澤 克樹（産総研 特定フェロー）<br>
+            小川 宏高（産総研 研究チーム長）<br>
+          </p-->
+
+          <p class="lead">
+            遠藤 敏夫（東工大教授、産総研招聘研究員）<br>
+            横田 理央（東工大准教授、産総研招聘研究員）<br>
           </p>
 
           <p class="lead">
-            遠藤 敏夫（東京工業大学 教授）<br>
-            横田 理央（東工大 准教授）<br>
-          </p>
-
-          <p class="lead">
-            松岡 聡（東工大 特任教授）<br>
+            松岡 聡（理研RCCSセンター長、東工大特任教授）<br>
             野村 哲弘（東工大 助教）<br>
 					</p>
 
