--- a/events/index-en.html
+++ b/events/index-en.html
@@ -94,6 +94,13 @@
       <div class="col-md-12">
       <!-- Add new event on top -->
 
+        <h3>Exhibit RWBC-OIL Reserch Activities at SC 2021</h3>
+        <ul>
+          <li>Date: 2021/11/14 - 2021/11/19</li>
+          <li>Online</li>
+          <li><a href="./20211114-sc21/index.html">More information</a></li>
+        </ul>
+
         <h3>Exhibit RWBC-OIL Reserch Activities at SC 2020</h3>
         <ul>
           <li>Date: 2020/11/9 - 2020/11/19</li>
