--- a/events/index.html
+++ b/events/index.html
@@ -94,6 +94,13 @@
 		<div class="col-md-12">
 		<!-- Add new event on top -->
 
+        <h3>SC 2021 Exhibitionでの研究成果展示</h3>
+        <ul>
+          <li>Date: 2021/11/14 - 2021/11/19</li>
+          <li>Online</li>
+          <li><a href="./20211114-sc21/index.html">More information</a></li>
+        </ul>
+
 
         <h3>SC 2020 Exhibitionでの研究成果展示</h3>
         <ul>
